--- a/src/test/Dime.Expressions.Tests.csproj
+++ b/src/test/Dime.Expressions.Tests.csproj
@@ -4,7 +4,7 @@
     <Description>Dime.Utilities.Expressions Tests</Description>
     <AssemblyTitle>Dime.Utilities.Expressions Tests</AssemblyTitle>
     <Authors>Dimenics</Authors>
-    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <AssemblyName>Dime.Expressions.Tests</AssemblyName>
     <PackageId>Dime.Utilities.Expressions.Tests</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
@@ -15,11 +15,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeCoverage" Version="16.9.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.9.1" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.2" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.10.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="16.10.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.5" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\core\Dime.Expressions.csproj" />
