--- a/src/core/Dime.Expressions.csproj
+++ b/src/core/Dime.Expressions.csproj
@@ -16,7 +16,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Version>1.1.0</Version>
+		<Version>1.2.0-beta.1</Version>
 		<NeutralLanguage>en</NeutralLanguage>
 		<AssemblyVersion>1.1.0.0</AssemblyVersion>
 		<FileVersion>1.1.0.0</FileVersion>
