--- a/src/tests/Dime.Expressions.EF.Tests/Dime.Expressions.EF.Tests.csproj
+++ b/src/tests/Dime.Expressions.EF.Tests/Dime.Expressions.EF.Tests.csproj
@@ -27,7 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\core\Dime.Expressions.csproj" />
+		<ProjectReference Include="..\..\core\Dime.Expressions.csproj" />
 	</ItemGroup>
 
 </Project>
